New CSS, add aside and img

--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1">
-        <link rel="stylesheet" href="styles/styles.css">
         <title>Joaquin Eduardo Caceres Bello | WDD 130</title>
+        <meta name="description" content="Joaquin Caceres | WDD 130 | Enhancing Your Course Home Page">
+        <meta name="author" content="Joaquin Caceres">
+        <link rel="stylesheet" href="styles/styles.css">
     </head>
     <body>
         <header>
@@ -18,6 +20,11 @@
             <img src="images/joaquin.jpg" alt="joaquin" width="200">
             <p>My name is Joaquin Caceres Bello, I am from Peru and I am 22 yeards old</p>
         </main>
+        <aside>
+            <h2>Peru</h2>
+            <img src="images/Peru_Ruins_Mountains.webp" alt="Macchu Picchu">
+            <p>Peru is a very touristy country due to its beautiful landscapes and delicious food.</p>
+        </aside>
         <footer>
             <p>©2025 Joaquin Eduardo Caceres Bello Peru</p>
         </footer>
