--- a/wwr/about.html
+++ b/wwr/about.html
@@ -24,10 +24,10 @@
     <main>
         <div class="divhero">
             <h1>Edward's Rafting Company</h1>
-            <img id="img1" src="images/rafting.jpg" alt="rafting" >
+            <img id= "img1" src="images/rafting.jpg" alt="rafting" >
             
             <article class="article">
-                <img id="img2" src="images/rafting2.jpg" alt="rafting 2">
+                <img src="images/rafting2.jpg" alt="rafting 2">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum autem nesciunt deleniti eaque eligendi beatae ut temporibus dolor, ipsam provident fugiat dolores! Porro corrupti eveniet eius maxime. Repudiandae, ex sed!</p>
             </article>
         </div>
