--- a/wwr/about.html
+++ b/wwr/about.html
@@ -26,7 +26,7 @@
             <h1>Edward's Rafting Company</h1>
             <img id= "img1" src="images/rafting.jpg" alt="rafting" >
             
-            <article id ="art">
+            <article>
                 <img src="images/rafting2.jpg" alt="rafting 2">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum autem nesciunt deleniti eaque eligendi beatae ut temporibus dolor, ipsam provident fugiat dolores! Porro corrupti eveniet eius maxime. Repudiandae, ex sed!</p>
             </article>
