--- a/wwr/about.html
+++ b/wwr/about.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Join Edward's Rafting Company for an exhilarating white water rafting experience. Our expert guides ensure a safe and thrilling adventure for all skill levels. Discover the beauty of nature's most stunning rivers with us.">
+    <meta name="author" content="Edward">
     <link rel="stylesheet" href="styles/rafting.css">
-    <title>White Water Rafting</title>
+    <title>About White Water Rafting</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -24,39 +27,44 @@
     <main>
         <div class="divhero">
             <h1>Edward's Rafting Company</h1>
-            <img id= "img1" src="images/rafting.jpg" alt="rafting" >
-            
+            <img id="img1" src="images/rafting.jpg" alt="Enjoy the travel">
+
             <article>
-                <img src="images/rafting2.jpg" alt="rafting 2">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum autem nesciunt deleniti eaque eligendi beatae ut temporibus dolor, ipsam provident fugiat dolores! Porro corrupti eveniet eius maxime. Repudiandae, ex sed!</p>
+                <img src="images/rafting2.jpg" alt="Happy People">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum autem nesciunt deleniti eaque
+                    eligendi beatae ut temporibus dolor, ipsam provident fugiat dolores! Porro corrupti eveniet eius
+                    maxime. Repudiandae, ex sed!</p>
             </article>
         </div>
         <section>
             <h2>History</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae, obcaecati eveniet cupiditate velit maiores aspernatur inventore sint perspiciatis voluptate quia nisi, quod aperiam hic sequi voluptas magnam temporibus, repellendus reprehenderit.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae, obcaecati eveniet cupiditate velit
+                maiores aspernatur inventore sint perspiciatis voluptate quia nisi, quod aperiam hic sequi voluptas
+                magnam temporibus, repellendus reprehenderit.</p>
         </section>
-        <section id ="rafting0">
+        <section id="rafting0">
             <h2>Adventure awaits you!</h2>
-            <img src="images/rafting3.jpg" alt="rafting 3" >
-            <img src="images/rafting4.jpg" alt="rafting 4" >
-            <img src="images/rafting5.jpg" alt="rafting 5" >
-            <img src="images/rafting6.jpg" alt="rafting 6" >
-            <img src="images/rafting7.jpg" alt="rafting 7" >
+            <img src="images/rafting3.jpg" alt="rafting in the river">
+            <img src="images/rafting4.jpg" alt="high speed">
+            <img src="images/rafting5.jpg" alt="strong waves">
+            <img src="images/rafting6.jpg" alt="qualified guides">
+            <img src="images/rafting7.jpg" alt="extreme fun">
         </section>
     </main>
     <footer>
         <p>© 2025 Eduard's Rfting Company | Joaquin Eduardo Caceres Bello</p>
-        <nav class="sociallinks">
+        <nav class="underlines">
             <a href="https://facebook.com">
-                <img src="images/facebook.webp" alt="" width="50">
+                <img src="images/facebook.webp" alt="facebook icon" width="50">
             </a>
             <a href="https://twitter.com">
-                <img src="images/twiter.webp" alt="" width="50">
+                <img src="images/twiter.webp" alt="twitter icon" width="50">
             </a>
             <a href="https://instagram.com">
-                <img src="images/instagram.webp" alt="" width="50">
+                <img src="images/instagram.webp" alt="instagram icon" width="50">
             </a>
         </nav>
     </footer>
 </body>
+
 </html>
