--- a/index.html
+++ b/index.html
@@ -3,28 +3,40 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1">
-        <title>Joaquin Eduardo Caceres Bello | WDD 130</title>
-        <meta name="description" content="Joaquin Caceres | WDD 130 | Enhancing Your Course Home Page">
+        <title>Joaquin Caceres Bello | WDD 130</title>
+        <meta name="description" content="Joaquin Caceres | WDD 130 | Enhancing My Course Home Page">
         <meta name="author" content="Joaquin Caceres">
         <link rel="stylesheet" href="styles/styles.css">
     </head>
     <body>
-        <header>
+        <header >
             <nav>
                 <a href="#">Home</a>
-                <a href="wwr/">Rafting Website</a>
+                <a href="wwr/about.html">Rafting Website</a>
+                <a href="https://www.linkedin.com/in/joaqu%C3%ADn-c%C3%A1ceres-bello/">Linkedin</a>
+                <a href="https://www.facebook.com/joaquineduardo.caceresbello/">Facebook</a>
             </nav>
         </header>
+        <div class="grid">
         <main>
             <h1>Joaquin Eduardo Caceres Bello | WDD 130</h1>
+            <ul class="box">
             <img src="images/joaquin.jpg" alt="joaquin" width="200">
-            <p>My name is Joaquin Caceres Bello, I am from Peru and I am 22 yeards old</p>
+            <p>My name is Joaquin Caceres Bello, I am from Peru and I am 22 yeards old.I am currently studying Web Design and Development at BYU-Pathway. I have a passion for creating beautiful and
+            functional websites. In my free time, I enjoy exploring new technologies, hiking, and experiencing the rich culture and
+            cuisine of Peru.</p>
+            </ul>
         </main>
-        <aside>
+        <aside class="box">
             <h2>Peru</h2>
             <img src="images/Peru_Ruins_Mountains.webp" alt="Macchu Picchu">
-            <p>Peru is a very touristy country due to its beautiful landscapes and delicious food.</p>
+            <p>Peru is a very touristy country due to its beautiful landscapes, rich history, and delicious food. From the ancient
+            ruins of Machu Picchu to the vibrant city life in Lima, there is something for everyone to enjoy. The diverse geography
+            offers a range of activities, including hiking in the Andes, exploring the Amazon rainforest, and relaxing on the
+            beaches of the Pacific coast. Peruvian cuisine is also renowned worldwide, with dishes like ceviche, lomo saltado, and
+            pisco sour delighting visitors.</p>
         </aside>
+    </div>
         <footer>
             <p>©2025 Joaquin Eduardo Caceres Bello Peru</p>
         </footer>
