--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1">
-        <title>Joaquin Caceres Bello | WDD 130</title>
+        <title>Joaquin Caceres | WDD 130</title>
         <meta name="description" content="Joaquin Caceres | WDD 130 | Enhancing My Course Home Page">
         <meta name="author" content="Joaquin Caceres">
         <link rel="stylesheet" href="styles/styles.css">
@@ -20,12 +20,10 @@
         <div class="grid">
         <main>
             <h1>Joaquin Eduardo Caceres Bello | WDD 130</h1>
-            <ul class="box">
             <img src="images/joaquin.jpg" alt="joaquin" width="200">
             <p>My name is Joaquin Caceres Bello, I am from Peru and I am 22 yeards old.I am currently studying Web Design and Development at BYU-Pathway. I have a passion for creating beautiful and
             functional websites. In my free time, I enjoy exploring new technologies, hiking, and experiencing the rich culture and
             cuisine of Peru.</p>
-            </ul>
         </main>
         <aside class="box">
             <h2>Peru</h2>
