enhance about us

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -4,25 +4,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Join Edward's Rafting Company for an exhilarating white water rafting experience. Our expert guides ensure a safe and thrilling adventure for all skill levels. Discover the beauty of nature's most stunning rivers with us.">
+    <meta name="description"
+        content="Join Edward's Rafting Company for an exhilarating white water rafting experience. Our expert guides ensure a safe and thrilling adventure for all skill levels. Discover the beauty of nature's most stunning rivers with us.">
     <meta name="author" content="Edward">
     <link rel="stylesheet" href="styles/rafting.css">
     <title>About White Water Rafting</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Raleway&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Raleway&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
     <header>
-        <img src="images/logo.jpeg" alt="logo" width="100">
-        <nav class="underlines">
-            <a href="index.html">Home</a>
-            <a href="about.html">About Us</a>
-            <a href="trips.html">Trips</a>
-            <a href="contact.html">Contact</a>
-        </nav>
+        <div class="header-grid">
+            <img src="images/logo.jpeg" alt="logo" width="100">
+            <nav class="underlines">
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About Us</a></li>
+                    <li><a href="trips.html">Trips</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
     <main>
         <div class="divhero">
@@ -44,15 +51,32 @@
         </section>
         <section id="rafting0">
             <h2>Adventure awaits you!</h2>
-            <img src="images/rafting3.jpg" alt="rafting in the river">
-            <img src="images/rafting4.jpg" alt="high speed">
-            <img src="images/rafting5.jpg" alt="strong waves">
-            <img src="images/rafting6.jpg" alt="qualified guides">
-            <img src="images/rafting7.jpg" alt="extreme fun">
+            <div class="adventures-grid">
+                <figure>
+                    <img src="images/rafting3.jpg" alt="rafting in the river">
+                    <figcaption>Rafting in the river</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/rafting4.jpg" alt="high speed">
+                    <figcaption>High speed</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/rafting5.jpg" alt="strong waves">
+                    <figcaption>Strong waves</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/rafting6.jpg" alt="qualified guides">
+                    <figcaption>Qualified guides</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/rafting7.jpg" alt="extreme fun">
+                    <figcaption>Extreme fun</figcaption>
+                </figure>
+            </div>
         </section>
     </main>
     <footer>
-        <p>© 2025 Eduard's Rfting Company | Joaquin Eduardo Caceres Bello</p>
+        <p>© 2025 Eduard's Rafting Company | Joaquin Eduardo Caceres Bello</p>
         <nav class="underlines">
             <a href="https://facebook.com">
                 <img src="images/facebook.webp" alt="facebook icon" width="50">
