--- a/week05/poll-form.html
+++ b/week05/poll-form.html
@@ -1,26 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WDD 130 | HTML Form - User Poll</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="styles/poll-form.css">
 </head>
+
 <body>
     <header>
-        <h1>WDD 130 | Your Name | HTML Form - User Poll</h1>
+        <h1>WDD 130 | HTML Form - User Poll</h1>
     </header>
     <main>
         <form>
             <fieldset>
                 <legend>Contact Information</legend>
-                <label for="fullname">Full Name:</label>
-                <input type="text" id="fullname" name="fullname" >
-                <label for="useremail">User Email:</label>
-                <input type="text" id="useremail" name="useremail">
+                <div class="form-item column2">
+                    <label for="fullname">Full Name:</label>
+                    <input type="text" id="fullname" name="fullname">
+                </div>
+                <div class="form-item column2">
+                    <label for="useremail">User Email:</label>
+                    <input type="text" id="useremail" name="useremail">
+                </div>
             </fieldset>
             <fieldset>
                 <legend>Questions</legend>
+            <div class="column1">                
                 <label for="browser">What is your favorite internet browser?</label>
                 <select name="browser" id="browser">
                     <option value="chrome">Chrome</option>
@@ -30,16 +39,21 @@
                     <option value="brave">Brave</option>
                     <option value="other">Other</option>
                 </select>
+            </div>
+            <div class="column1">
                 <label for="pet">Do you have a household pet?</label>
                 <input type="checkbox" id="pet" name="pet">
+            </div>
                 <label for="feedback">List the places you have lived:</label>
-                <textarea name="feedback" id="feedback" rows="4" placeholder="Megaplaza, North Plaza, Water Park"></textarea>
+                <textarea name="feedback" id="feedback" rows="4"
+                    placeholder="Megaplaza, North Plaza, Water Park"></textarea>
             </fieldset>
             <button type="submit">Submit Poll</button>
         </form>
     </main>
     <footer>
-        <p>©2025 | HTML Form - User Poll Activity | Your name</p>
+        <p>©2025 | HTML Form - User Poll Activity | Joaquin Caceres</p>
     </footer>
 </body>
+
 </html>
