--- a/wwr/about.html
+++ b/wwr/about.html
@@ -38,9 +38,11 @@
 
             <article>
                 <img src="images/rafting2.jpg" alt="Happy People">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum autem nesciunt deleniti eaque
-                    eligendi beatae ut temporibus dolor, ipsam provident fugiat dolores! Porro corrupti eveniet eius
-                    maxime. Repudiandae, ex sed!</p>
+                <p>At Edward's Rafting Company, our goal is to provide unforgettable experiences in nature through exciting rafting
+                adventures. Our mission is to offer safe and exciting rafting adventures for all skill levels, ensuring that every
+                customer enjoys a unique and memorable experience. Our motto is: "Adventure and Safety in Every Stroke." We pride
+                ourselves on our commitment to safety, quality, and customer satisfaction, and are dedicated to making every trip an
+                experience our customers will treasure forever.</p>
             </article>
         </div>
         <section>
