--- a/wwr/about.html
+++ b/wwr/about.html
@@ -47,9 +47,16 @@
         </div>
         <section>
             <h2>History</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae, obcaecati eveniet cupiditate velit
-                maiores aspernatur inventore sint perspiciatis voluptate quia nisi, quod aperiam hic sequi voluptas
-                magnam temporibus, repellendus reprehenderit.</p>
+            <p>Edward's Rafting Company was founded in 1995 by Edward, a passionate rafting enthusiast and nature lover. From humble
+            beginnings, the company has grown to become one of the most respected rafting companies in the region. With a focus on
+            safety and customer satisfaction, Edward's Rafting Company has taken thousands of adventurers through some of the most
+            beautiful and challenging rivers in the world. Over the years, we have expanded our offerings to include a variety of
+            rafting trips to suit all skill levels, from beginners to experts. Our team of experienced and certified guides is
+            dedicated to providing a safe and exciting experience for all of our customers. We take pride in our reputation for
+            excellence and are committed to maintaining the highest standards of quality in everything we do. Today, Edward's
+            Rafting Company remains a family-owned business, with Edward and his team working together to share their love of
+            rafting and nature with people around the world. Join us and discover why we are the preferred choice for unforgettable
+            rafting adventures.</p>
         </section>
         <section id="rafting0">
             <h2>Adventure awaits you!</h2>
