--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -32,7 +32,7 @@
         </div>
     </header>
     <main>
-        <h1 class="center-text">Contact Us</h1>
+        <h1>Contact Us</h1>
         <p>Edward's Rafting Company</p>
         <p>Phone: +51 913968806</p>
         <p>Email: <a href="mailto:jcaceresbello@byupathway.edu">jcaceresbello@byupathway.edu</a></p>
@@ -78,19 +78,19 @@
                 </form>
             </fieldset>
         </section>
-        <h2 class="center-text">Meet Our Team</h2>
-        <div class="team-grid">
+        <h2>Meet Our Team</h2>
+        <div>
             <figure>
                 <img src="images/employer1.jpg" alt="Employer 1">
-                <figcaption>Employer 1</figcaption>
+                <figcaption>Professional diver</figcaption>
             </figure>
             <figure>
                 <img src="images/employer2.jpg" alt="Employer 2">
-                <figcaption>Employer 2</figcaption>
+                <figcaption>Water sports instructor</figcaption>
             </figure>
             <figure>
                 <img src="images/employer3.jpg" alt="Employer 3">
-                <figcaption>Employer 3</figcaption>
+                <figcaption>Lifeguard</figcaption>
             </figure>
         </div>
     </main>
