--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -36,10 +36,9 @@
         <p>Edward's Rafting Company</p>
         <p>Phone: +51 913968806</p>
         <p>Email: <a href="mailto:jcaceresbello@byupathway.edu">jcaceresbello@byupathway.edu</a></p>
-        <div class="Map">
+        <div>
             <iframe
-                src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d7962.949376771987!2d-73.25287754315231!3d-3.706076270399173!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2spe!4v1739900909990!5m2!1ses-419!2spe"
-                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d7962.949376771987!2d-73.25287754315231!3d-3.706076270399173!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2spe!4v1739900909990!5m2!1ses-419!2spe" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
                 referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
         <section id="contact-form">
