--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -17,7 +17,7 @@
         rel="stylesheet">
 </head>
 
-<body>
+<body id="contact-page">
     <header>
         <div class="header-grid">
             <img src="images/logo.jpeg" alt="logo" width="100">
@@ -96,7 +96,7 @@
     <footer>
         <p>© 2025 Edward's Rafting Company | Joaquin Eduardo Caceres Bello</p>
         <nav class="footer-nav">
-            <a href="images/contact-wireframe.png">Contact Us Wireframe</a>
+            <a href="https://app.moqups.com/7Sgd8OSpomgsWotNxYtpk9iT9Ol05QUK/view/page/ad64222d5">Contact Us Wireframe</a>
             <div class="social-links">
                 <a href="https://facebook.com">
                     <img src="images/facebook.webp" alt="facebook icon" width="50">
