--- a/wwr/about.html
+++ b/wwr/about.html
@@ -26,7 +26,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About Us</a></li>
                     <li><a href="trips.html">Trips</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="contact.html">Contact Us</a></li>
                 </ul>
             </nav>
         </div>
@@ -38,25 +38,38 @@
 
             <article>
                 <img src="images/rafting2.jpg" alt="Happy People">
-                <p>At Edward's Rafting Company, our goal is to provide unforgettable experiences in nature through exciting rafting
-                adventures. Our mission is to offer safe and exciting rafting adventures for all skill levels, ensuring that every
-                customer enjoys a unique and memorable experience. Our motto is: "Adventure and Safety in Every Stroke." We pride
-                ourselves on our commitment to safety, quality, and customer satisfaction, and are dedicated to making every trip an
-                experience our customers will treasure forever.</p>
+                <p>At Edward's Rafting Company, our goal is to provide unforgettable experiences in nature through
+                    exciting rafting
+                    adventures. Our mission is to offer safe and exciting rafting adventures for all skill levels,
+                    ensuring that every
+                    customer enjoys a unique and memorable experience. Our motto is: "Adventure and Safety in Every
+                    Stroke." We pride
+                    ourselves on our commitment to safety, quality, and customer satisfaction, and are dedicated to
+                    making every trip an
+                    experience our customers will treasure forever.</p>
             </article>
         </div>
         <section>
             <h2>History</h2>
-            <p>Edward's Rafting Company was founded in 1995 by Edward, a passionate rafting enthusiast and nature lover. From humble
-            beginnings, the company has grown to become one of the most respected rafting companies in the region. With a focus on
-            safety and customer satisfaction, Edward's Rafting Company has taken thousands of adventurers through some of the most
-            beautiful and challenging rivers in the world. Over the years, we have expanded our offerings to include a variety of
-            rafting trips to suit all skill levels, from beginners to experts. Our team of experienced and certified guides is
-            dedicated to providing a safe and exciting experience for all of our customers. We take pride in our reputation for
-            excellence and are committed to maintaining the highest standards of quality in everything we do. Today, Edward's
-            Rafting Company remains a family-owned business, with Edward and his team working together to share their love of
-            rafting and nature with people around the world. Join us and discover why we are the preferred choice for unforgettable
-            rafting adventures.</p>
+            <p>Edward's Rafting Company was founded in 1995 by Edward, a passionate rafting enthusiast and nature lover.
+                From humble
+                beginnings, the company has grown to become one of the most respected rafting companies in the region.
+                With a focus on
+                safety and customer satisfaction, Edward's Rafting Company has taken thousands of adventurers through
+                some of the most
+                beautiful and challenging rivers in the world. Over the years, we have expanded our offerings to include
+                a variety of
+                rafting trips to suit all skill levels, from beginners to experts. Our team of experienced and certified
+                guides is
+                dedicated to providing a safe and exciting experience for all of our customers. We take pride in our
+                reputation for
+                excellence and are committed to maintaining the highest standards of quality in everything we do. Today,
+                Edward's
+                Rafting Company remains a family-owned business, with Edward and his team working together to share
+                their love of
+                rafting and nature with people around the world. Join us and discover why we are the preferred choice
+                for unforgettable
+                rafting adventures.</p>
         </section>
         <section id="rafting0">
             <h2>Adventure awaits you!</h2>
@@ -85,17 +98,19 @@
         </section>
     </main>
     <footer>
-        <p>© 2025 Eduard's Rafting Company | Joaquin Eduardo Caceres Bello</p>
-        <nav class="underlines">
-            <a href="https://facebook.com">
-                <img src="images/facebook.webp" alt="facebook icon" width="50">
-            </a>
-            <a href="https://twitter.com">
-                <img src="images/twiter.webp" alt="twitter icon" width="50">
-            </a>
-            <a href="https://instagram.com">
-                <img src="images/instagram.webp" alt="instagram icon" width="50">
-            </a>
+        <p>© 2025 Edward's Rafting Company | Joaquin Eduardo Caceres Bello</p>
+        <nav class="footer-nav">
+            <div class="social-links">
+                <a href="https://facebook.com">
+                    <img src="images/facebook.webp" alt="facebook icon" width="50">
+                </a>
+                <a href="https://twitter.com">
+                    <img src="images/twiter.webp" alt="twitter icon" width="50">
+                </a>
+                <a href="https://instagram.com">
+                    <img src="images/instagram.webp" alt="instagram icon" width="50">
+                </a>
+            </div>
         </nav>
     </footer>
 </body>
