--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -26,7 +26,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About Us</a></li>
                     <li><a href="trips.html">Trips</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="contact.html">Contact Us</a></li>
                 </ul>
             </nav>
         </div>
@@ -38,7 +38,8 @@
         <p>Email: <a href="mailto:jcaceresbello@byupathway.edu">jcaceresbello@byupathway.edu</a></p>
         <div>
             <iframe
-                src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d7962.949376771987!2d-73.25287754315231!3d-3.706076270399173!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2spe!4v1739900909990!5m2!1ses-419!2spe" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d7962.949376771987!2d-73.25287754315231!3d-3.706076270399173!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2spe!4v1739900909990!5m2!1ses-419!2spe"
+                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
                 referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
         <section id="contact-form">
@@ -96,7 +97,8 @@
     <footer>
         <p>© 2025 Edward's Rafting Company | Joaquin Eduardo Caceres Bello</p>
         <nav class="footer-nav">
-            <a href="https://app.moqups.com/7Sgd8OSpomgsWotNxYtpk9iT9Ol05QUK/view/page/ad64222d5">Contact Us Wireframe</a>
+            <a href="https://app.moqups.com/7Sgd8OSpomgsWotNxYtpk9iT9Ol05QUK/view/page/ad64222d5">Contact Us
+                Wireframe</a>
             <div class="social-links">
                 <a href="https://facebook.com">
                     <img src="images/facebook.webp" alt="facebook icon" width="50">
