--- a/wwr/index.html
+++ b/wwr/index.html
@@ -25,7 +25,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About Us</a></li>
                     <li><a href="trips.html">Trips</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="contact.html">Contact Us</a></li>
                 </ul>
             </nav>
         </div>
@@ -76,14 +76,12 @@
     <footer>
         <p>© 2025 Edward's Rafting Company | Joaquin Eduardo Caceres Bello</p>
         <nav class="footer-nav">
-            <a href="https://app.moqups.com/7Sgd8OSpomgsWotNxYtpk9iT9Ol05QUK/view/page/ad64222d5">Contact Us
-                Wireframe</a>
             <div class="social-links">
                 <a href="https://facebook.com">
                     <img src="images/facebook.webp" alt="facebook icon" width="50">
                 </a>
                 <a href="https://twitter.com">
-                    <img src="images/twitter.webp" alt="twitter icon" width="50">
+                    <img src="images/twiter.webp" alt="twitter icon" width="50">
                 </a>
                 <a href="https://instagram.com">
                     <img src="images/instagram.webp" alt="instagram icon" width="50">
